carousel section text error fixed on small device

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
   .carousel-caption {
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: 0;
     right: 0;
   }
